--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 body{
     padding: 0;
     margin: 0 0 0 0;
+    background-color: #DDCA7D;
 }
 div.contenedor{
     width: 60%;
     height: 100%;
-    margin-left: 20%;
-    padding-right: 20%;
+    padding-top: 1%;
+    margin-left: 16%;
+    margin-right: 16%;
+    padding-left: 4%;
+    padding-right: 4%;
+   background-image: url(papel.jpg);
 }
 div.titulo{
     text-align: center;
@@ -15,4 +20,81 @@ div.titulo{
    padding-bottom: 5%;
     color: white;
     background-color: black;
+}
+div.navbar{
+    width: 100%;
+    height: 10%;
+  background-color: blue;
+  padding-bottom: 3%;
+}
+div.boutme{
+    float: left;
+    color: cornsilk;
+    text-align: center;
+    padding-top: 0.5% ;
+    padding-bottom: 0.5%;
+    padding-right: 14.5%;
+    padding-left: 14.5%;
+   border-right-style: groove;
+   border-right-color: darkgrey;
+}
+div.contacto{
+    float: left;
+    color: cornsilk;
+    text-align: center;
+    padding-top: 0.5% ;
+    padding-bottom: 0.5%;
+    padding-right: 14.5%;
+    padding-left: 14.5%;
+    border-right-style: groove;
+    border-right-color: darkgrey;
+}
+div.Blogs{
+    float: left;
+    color: cornsilk;
+    text-align: center;
+    padding-top: 0.5% ;
+    padding-bottom: 0.5%;
+    padding-right: 14.5%;
+   padding-left: 14.5%;
+}
+div.text{
+  font-size:x-large;
+}
+@media screen and ( max-width: 800px ) {
+    div.navbar{
+        height: 20%;
+        padding-bottom:5%;
+    }
+    div.Blogs{
+        float: none;
+        align-self: center;
+    }
+    div.text{
+        font-size: medium;
+    }
+    div.contenedor{
+        padding-top: 1%;
+        margin-left: 0;
+        margin-right: 0;
+        padding-right: 0;
+        padding-left: 0;
+        height: 100%;
+        width: 100%;
+    }
+    div.boutme{
+        border-right-style: none;
+    }
+    div.contacto{
+        border-right-style: none;
+    }
+}
+@media screen and ( max-width: 1200px ) {
+    div.contenedor{
+        padding-top: 1%;
+    }
+    div.Blogs{
+        float: none;
+        align-self: center;
+    }
 }
