--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     padding: 0;
     margin: 0 0 0 0;
-    background-color: #DDCA7D;
+    background-image: url( Madera.jpg );
 }
 div.contenedor{
     width: 60%;
